# Learning

PycharmProjects/Coursera_Crash-Course-on-Python/: scratch.py  scratch_1.py
PycharmProjects/Python_Crash_Course_2ndEd/: Python_Crash_Course_ch3.py  Python_Crash_Course_ch4.py  Python_Crash_Course_ch5.py  Python_Crash_Course_ch6.py  ScratchFile_2.py  chapter 4 notes.py  chapter 5 notes.py  chapter 6 notes.py  chapter 6_alien_position.py  scratchFile.py
PycharmProjects/Tutorials_misc/: 11 tips and tricks to write better Python code.py  YouTube_downloader.py  YouTube_downloader_0.0.10.py  YouTube_downloader_0.0.11.py  day_you_were_born.py  extend_function.py  recursion.py  simon_game.py  tract_phone_spam.py  zip_function.py  zip_lists_together.py
PycharmProjects/electronics/: blinkingLights.py  blinkingLights2.py  blinkingLights3.py  blinkingLights4.py  test.py
Python/smartFotoMove/: .gitignore  README.md  make_test_images.py  photomover_standalone.py  photomover_v-0.0.1.py  photomover_v-0.0.2.py  photomover_v-0.0.3.py  pyproject.toml  requirements.txt
Python/smartFotoMove/old/: README-AMD32-JON.md  photomover_standalone-AMD32-JON.py  photomover_standalone.py  requirements-visual-AMD32-JON.txt  requirements-visual.txt
Python/smartFotoMove/old2/: README-AMD32-JON.md  README.md
Python/smartFotoMove/photocat/: cli.py  config.py  db.py  dedup.py  enrich.py  exif.py  faces.py  geocode.py  menu.py  ocr.py  organize.py  scan.py  search.py
Python/smartFotoMove/photomover/: README.md  photomover_standalone.py  requirements-visual.txt
(+133 files in other folders)
