[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photocat"
version = "0.1.0"
description = "Searchable photo catalog: scan once, search by object/date/place/person."
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.2.0",
    "piexif>=1.1.3",
    "ImageHash>=4.3.1",
    "reverse_geocoder>=1.5.1",
    "numpy>=1.26",
    "rich>=13.7",
    "typer>=0.12",
]

# AI enrichment extras. Install torch with CUDA *first* (see README), then:
#   pip install -e ".[ai]"
[project.optional-dependencies]
ai = [
    "torch>=2.2",
    "torchvision>=0.17",
    "open_clip_torch>=2.24",
    # Florence-2's bundled remote code is incompatible with transformers >= ~4.50
    # (Cache API + removed _supports_sdpa / forced_bos_token_id). 4.44.2 is the
    # verified-working version. Do not bump without re-testing Florence-2.
    "transformers==4.44.2",
    "einops>=0.7",
    "timm>=0.9",
]
faces = ["insightface>=0.7.3", "onnxruntime-gpu>=1.17"]
heic = ["pillow-heif>=0.16"]
# Full-resolution OCR for documents/IDs/signs. EasyOCR is the default engine
# (reuses the project's torch; runs on GPU). Paddle/Tesseract are alternatives.
easyocr = ["easyocr>=1.7"]
paddle = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
tesseract = ["pytesseract>=0.3.10"]  # also needs the Tesseract binary installed

[project.scripts]
photocat = "photocat.cli:main"

[tool.setuptools]
packages = ["photocat"]
